[tool.poetry]
name = "pythoneda-git-repositories-infrastructure"
version = "0.0.1a1"
description = "Infrastructure layer of PythonEDA Git Repositories"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
packages = [{include = "PythonEDAGitRepositoriesInfrastructure"}]

[tool.poetry.dependencies]
python = "^3.7"
pythoneda-git-repositories = "^0.0.1a1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
